# algoritmos-dijkstra-kruskal-prim

./: pyproject.toml
src/: Main.py
