[tool.poetry]
name = "projetoanalisealgorit"
version = "0.1.0"
description = ""
authors = ["Delcor <matheusdelcorbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
